Fixed white space issue in about_us page. Changed footer text width from 150% to 70vw

--- a/frontend/src/styles/components/footer.scss
+++ b/frontend/src/styles/components/footer.scss
@@ -37,6 +37,8 @@
   ul {
     display: flex;
     justify-content: space-between;
-    width: 150%;
+    // width: 150%;
+    width: 70vw;
   }
 }
+
